--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -26,8 +26,7 @@ html
                             input#autocomplete.form-control.mr-sm-2(type='Search' placeholder='Search' aria-label='Search')
                 hr
                 div.row
-                    div#ztop-block.col-12
-                        code#ztop
+                    div.col-12#ztop
                 div#overview.collapse.container-fluid
                     div.row
                         div#overview-information.col-sm-12.col-xl-6
