--- a/www/views/killmail.pug
+++ b/www/views/killmail.pug
@@ -32,6 +32,8 @@ div.row.m-0.p-0
 					+info_row_a('Region:', 'region', rawmail.region_id, rawmail.region_name)
 					+info_row_a('Location:', 'location', rawmail.location_id, rawmail.location_name)
 					+info_row('Time:', time)
+					+info_row('Destroyed:', killmail.totals.destroyed, 'isk')
+					+info_row('Dropped:', killmail.totals.dropped, 'isk')
 					+info_row('Total Value:', killmail.total_value, 'isk')
 					tr
 						td Labels
@@ -49,18 +51,18 @@ div.row.m-0.p-0
 						td.border-0.cargoimage
 							button.btn.group-toggle.p-0.m-0(type='button',data-toggle='collapse',data-target='.item-group',aria-expanded="true" )
 						td.border-0.cargoname
-							button.sort-trigger.collapse#sort-reset Reset Sort
+							button.btn.btn-primary.sort-trigger.collapse#sort-reset Reset Sort
 						td.border-0.text-right.cargoamount 
-							button.sort-trigger Qty
+							button.btn.btn-light.sort-trigger Qty
 						td.border-0.text-right.cargo-price
-							button.sort-trigger Value
+							button.btn.btn-light.sort-trigger Value
 					each group in killmail.cargo_groups
 						tr.group-name
 							td
 								button.btn.group-toggle.p-0.m-0(type='button',data-toggle='collapse',data-target='.group-' + group,aria-expanded="true" )
 							td(colspan='3')
-								h6= killmail.group_names[group]
-						- var items = killmail.allslots[group]
+								h5= killmail.group_names[group]
+						- var items = killmail.group_items[killmail.group_names[group]]
 						each item in items
 							tr.item-group.show(class=item.class, class='group-' + group)
 								td.cargoimage
@@ -72,7 +74,7 @@ div.row.m-0.p-0
 					tr
 						td
 						td(colspan='3')
-							h6 Ship		
+							h5 Ship		
 					tr(class='victimrow')
 							td
 								+type_image('span', victim.ship_type_id, victim.ship_type_name, 32)
@@ -82,22 +84,24 @@ div.row.m-0.p-0
 							td.integer.text-right= killmail.ship_price
 					tr
 						td
-						td(colspan='3')
-							h6 Totals
+						td
+						td.text-right 
+							h5 Totals
+						td
 					tr.aggressorrow
 						td
-						td Dropped
-						td
+						td 
+						td.text-right Dropped:
 						td.integer.text-right= killmail.totals.dropped
 					tr.victimrow
 						td
-						td Destroyed
-						td
+						td 
+						td.text-right Destroyed:
 						td.integer.text-right= killmail.totals.destroyed
 					tr
 						td
-						td Total
-						td
+						td 
+						td.text-right Total:
 						td.integer.text-right= killmail.total_value
 	div.col-12.col-xl-4
 		div#overview-involved
