--- a/www/public/css/z.css
+++ b/www/public/css/z.css
@@ -174,6 +174,18 @@ div#overview-information ul li {
     background-color: #001600;
 }
 
+.aggressor, .victim {
+    display:  none;
+}
+
+.aggressorrow .aggressor {
+    display: inline;
+}
+
+.victimrow .victim {
+    display: inline;
+}
+
 /* https://stackoverflow.com/questions/41747667/bootstrap-4-responsive-tables-wont-take-up-100-width */
 /*.table-responsive {
     display: table;
