--- a/www/views/killmail.pug
+++ b/www/views/killmail.pug
@@ -42,16 +42,14 @@ div.row.m-0.p-0
 								+add_label('nostats')
 							each label in killmail.labels
 								+add_label(label)
-
-
 		div#killmail-cargo.col-12
 			table#cargotable.table.table-sm.table-hover.table-responsive-sm
 				tbody
-					tr.border-0#master-sort-row
-						td.border-0.cargoimage
+					tr.border-0#master-sort-row(style='background-color: inherit;')
+						td.border-0.cargoimage(style='min-width: 50px;')
 							button.btn.group-toggle.p-0.m-0(type='button',data-toggle='collapse',data-target='.item-group',aria-expanded="true" )
-						td.border-0.cargoname
-							button.btn.btn-primary.sort-trigger.collapse#sort-reset Reset Sort
+							button.btn.btn-primary.sort-trigger.collapse.bi.bi-backspace#sort-reset
+						td.border-0.cargoname(width='100%')
 						td.border-0.text-right.cargoamount 
 							button.btn.btn-light.sort-trigger Qty
 						td.border-0.text-right.cargo-price
