--- a/www/views/index.pug
+++ b/www/views/index.pug
@@ -61,12 +61,12 @@ html
                                     button.ofilter.btn.btn-secondary(type='button') EXTREMEISK
                                     button.ofilter.btn.btn-secondary(type='button') INSANEISK
                     div.row
-                        div.col-sm-12.col-xl-6
+                        div.col-sm-12.col-md-9.col-xl-6
                             div#overview-information
                             div#overview-killmails
                                 div#killlist
                                 div.m-5
-                        div.col-sm-12.col-xl-6
+                        div.col-sm-12.col-md-3.col-xl-6
                             div#overview-statistics
                                 div.table-responsive.float-right
                                     table#stats-table.table.table-hover.table-sm.table-responsive
