--- a/www/views/mixins.pug
+++ b/www/views/mixins.pug
@@ -50,6 +50,7 @@ mixin add_label(label)
 					|&nbsp;
 
 mixin tag_image(tag, url, src, name, size)
+	- tag = (tag ? tag : 'span')
 	#{tag}
 		-var onerror = 'this.onerror = null; this.src="https://images.evetech.net/alliances/1/logo?size=' + size + '"';
 		-var imageHolder = 'width: ' + size + 'px; height: ' + size + 'px;'
