--- a/www/views/toptens.pug
+++ b/www/views/toptens.pug
@@ -1,15 +1,11 @@
 include mixins.pug
 
-if json.numDays
+if json.topisk && json.topisk.length > 0
 	h4.text-capitalize
 		if json.numDays == 'Alltime'
 			span= 'top ' + json.killed_lost + ': alltime'
 		else
 			span= 'top ' + json.killed_lost + ': past ' + json.numDays + ' days'
-else
-	i nothing to see here... 
-
-if json.topisk
 	hr
 	div.row
 		each row in json.topisk
@@ -31,6 +27,12 @@ if json.topisk
 						tr
 							td.fnumber= row.total_value
 if json.types
+	h4.text-capitalize
+		if json.numDays == 'Alltime'
+			span= 'top ' + (json.killed_lost == 'killed' ? 'killers' : 'victims') + ': alltime'
+		else
+			span= 'top ' + (json.killed_lost == 'killed' ? 'killers' : 'victims') + ': past ' + json.numDays + ' days'
+
 	hr
 	div.row
 		each arr,type in json.types
