--- a/www/views/toptens.pug
+++ b/www/views/toptens.pug
@@ -48,3 +48,7 @@ if json.types
 								td.top10name
 									+show_link('span', type, value[type], value[name])
 								td.top10count.text-right.integer= value.count 
+else
+	i.bi.bi-slash-circle
+	i.bi.bi-filter
+	i No activity found with current filter(s).
